--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,17 @@
 img {
-  height: 80%;
-  width: 80%;
+  height: 65%;
+  width: 65%;
   margin-bottom: 1em;
 
 }
 
-.books {
-  margin-left: 5em;
-  margin-top: 5em;
+body {
+  font-family: 'Poiret One', cursive;
 }
 
-.movies {
-  margin-left: 5em;
+
+
+.carouselPic {
+  width: 50%;
+  height: 50%;
 }
