update carousel to move both forward and backwards and loop

--- a/templates/home.hbs
+++ b/templates/home.hbs
@@ -1,4 +1,4 @@
-<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+<a href="#" {{action 'backSwitchPicture'}}><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
 <img class="carouselPic" {{bind-attr src=whichPicture}}>
 <a href="#" {{action 'switchPicture'}}> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
 
