--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,25 @@ img {
   height: 65%;
   width: 65%;
   margin-bottom: 1em;
-
 }
 
 body {
   font-family: 'Poiret One', cursive;
 }
 
-
-
 .carouselPic {
   width: 50%;
   height: 50%;
 }
-#
+
+.social-media img{
+  float: right;
+  height: 3%;
+  width: 3%;
+  margin-bottom: 0;
+}
+
+.mediaLinks{
+  float: right;
+  margin-top: 3em;
+}
